--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,20 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.10</maven.compiler.source>
+		<maven.compiler.target>1.10</maven.compiler.target>
+		<maven.compiler.release>1.10</maven.compiler.release>
 	</properties>
+
+	<plugins>
+		<plugin>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<configuration>
+				<source>1.10</source>
+				<target>1.10</target>
+			</configuration>
+		</plugin>
+	</plugins> 
 
 	<dependencies>
 		<dependency>
